<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eligibiity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <TextView
        android:id="@+id/quest1Text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="@string/healtyQuest"
        app:layout_constraintBottom_toTopOf="@+id/quest3Text"
        app:layout_constraintEnd_toStartOf="@+id/healthCheck"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/quest2Text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sleepQuest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sleepCheck"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553" />

    <TextView
        android:id="@+id/quest3Text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/ageQuest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/agetTF"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <TextView
        android:id="@+id/quest4Text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/weightQuest"
        app:layout_constraintBottom_toTopOf="@+id/quest2Text"
        app:layout_constraintEnd_toStartOf="@+id/weightTF"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.874" />

    <CheckBox
        android:id="@+id/healthCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="20dp"
        android:text="@string/yesAnswer"
        app:layout_constraintBottom_toTopOf="@+id/agetTF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />

    <CheckBox
        android:id="@+id/sleepCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:text="@string/yesAnswer"
        app:layout_constraintBaseline_toBaselineOf="@+id/quest2Text"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/weightTF"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/weightHint"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/quest4Text"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/agetTF"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/ageHint"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/quest3Text"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/donateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:text="@string/donate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleepCheck"
        app:layout_constraintVertical_bias="0.518" />

</androidx.constraintlayout.widget.ConstraintLayout>